--- a/default/hypr/bindings/tiling.conf
+++ b/default/hypr/bindings/tiling.conf
@@ -1,5 +1,5 @@
 # Close window
-bindd = SUPER, W, Close active window, killactive,
+bindd = SUPER, Q, Close active window, killactive,
 
 # Control tiling
 bindd = SUPER, J, Toggle split, togglesplit, # dwindle
