--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,27 +22,19 @@ source = ~/.config/omarchy/current/theme/hyprland.conf
 $terminal = uwsm app -- alacritty
 $browser = uwsm app -- chromium --new-window --ozone-platform=wayland
 $webapp = $browser --app
+$zen = uwsm app -- zen-browser
 
 bindd = SUPER, return, Terminal, exec, $terminal
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER, M, Music, exec, uwsm app -- spotify
+bindd = SUPER, B, Browser, exec, $zen
 bindd = SUPER, N, Neovim, exec, $terminal -e nvim
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
 bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
 bindd = SUPER, A, ChatGPT, exec, $webapp="https://chatgpt.com"
-bindd = SUPER SHIFT, A, Grok, exec, $webapp="https://grok.com"
-bindd = SUPER, C, Calendar, exec, $webapp="https://app.hey.com/calendar/weeks/"
-bindd = SUPER, E, Email, exec, $webapp="https://app.hey.com"
 bindd = SUPER, Y, YouTube, exec, $webapp="https://youtube.com/"
-bindd = SUPER SHIFT, G, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
-bindd = SUPER ALT, G, Google Messages, exec, $webapp="https://messages.google.com/web/conversations"
-bindd = SUPER, X, X, exec, $webapp="https://x.com/"
-bindd = SUPER SHIFT, X, X Post, exec, $webapp="https://x.com/compose/post"
 
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
