Update zsh config and default config

--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -2,7 +2,7 @@
 
 bindd = SUPER, return, Terminal, exec, $terminal
 bindd = SUPER, F, File manager, exec, $fileManager
-bindd = SUPER, B, Web browser, exec, $browser
+bindd = SUPER, B, Web browser, exec, zen-browser-bin
 bindd = SUPER, M, Music player, exec, $music
 bindd = SUPER, N, Neovim, exec, $terminal -e nvim
 bindd = SUPER, T, Top, exec, $terminal -e btop
